feat: 引入node-consul作consul客户端，调整工程目录结构，增加内置微服务路由服务（未完成），增加微服务注册、endpoint查重以及微服务健康检查插件

--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   },
   "homepage": "https://github.com/Cecil0o0/vastify#readme",
   "dependencies": {
-    "install": "^0.11.0",
+    "consul": "^0.31.0",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "mongoose": "^5.1.2",
     "seneca": "^3.5.0",
     "seneca-web": "^2.2.0",
     "seneca-web-adapter-koa2": "^1.1.0",
+    "uuid": "^3.2.1",
     "winston": "^3.0.0-rc5"
   }
 }
